# defly

./: .env.example  .gitignore  AUTHORS  README.md  docker-compose.yml
architectures/: DeflyDatabase.drawio
defender/: .dockerignore  .env.example  .gitignore  Dockerfile  go.mod  go.sum
docs/: Outline.md
orchestrator/: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.en.md  README.md  README.vi.md  entrypoint.sh  manage.py  pyproject.toml
orchestrator/app/assistant/: apps.py  middlewares.py  models.py  urls.py
orchestrator/app/assistant/prompts/: __init__.py  system.py
orchestrator/app/assistant/services/: ai.py  permissions.py
orchestrator/app/assistant/views/: mai.py
orchestrator/app/bases/: apps.py  exceptions.py  middlewares.py  models.py  urls.py  views.py
orchestrator/app/bases/management/commands/: generatesecretkeyfile.py  generatetlsfile.py
orchestrator/app/bases/services/: permissions.py
orchestrator/app/deployments/: apps.py  middlewares.py  models.py  urls.py
orchestrator/app/deployments/services/: docker.py  permissions.py
orchestrator/app/deployments/views/: defender.py
orchestrator/configs/: asgi.py  bases.py  development.py  production.py  urls.py  validators.py
orchestrator/tests/assistant/: test_middlewares.py  test_permissions.py  test_services.py  test_views.py
orchestrator/tests/bases/: test_exceptions.py  test_middlewares.py  test_permissions.py
orchestrator/tests/deployments/: helpers.py  test_docker_service.py  test_middlewares.py  test_permissions.py  test_views.py
(+1084 files in other folders)
