[project]
name = "defly-orchestrator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cryptography>=47.0.0",
    "django>=6.0.4",
    "django-environ>=0.13.0",
    "docker>=7.1.0",
    "langchain>=1.3.10",
    "langchain-openai>=1.3.2",
    "mysqlclient>=2.2.8",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.format]
quote-style = "double"
